[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/PlayerFlag.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/LevelTemplate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/WallFlag.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PlayerWall.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=7]

[node name="Level4" type="Node2D"]
script = ExtResource( 7 )

[node name="LevelTemplate" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 178.909, 1000.38 )

[node name="PlayerWall" parent="." instance=ExtResource( 6 )]
position = Vector2( 1684.51, 961.32 )

[node name="Wall" parent="." instance=ExtResource( 2 )]
position = Vector2( 1688.29, 777.371 )
scale = Vector2( 6.70447, 1.27767 )

[node name="WallFlag" parent="." instance=ExtResource( 5 )]
position = Vector2( 358.216, 960.362 )

[node name="PlayerFlag" parent="." instance=ExtResource( 1 )]
position = Vector2( 1710.16, 706.211 )

[connection signal="body_entered" from="WallFlag" to="." method="_on_WallFlag_body_entered"]
[connection signal="body_exited" from="WallFlag" to="." method="_on_WallFlag_body_exited"]
[connection signal="body_entered" from="PlayerFlag" to="." method="_on_PlayerFlag_body_entered"]
[connection signal="body_exited" from="PlayerFlag" to="." method="_on_PlayerFlag_body_exited"]
